--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/mjml": "^4.7.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node-cron": "^3.0.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "concurrently": "^8.2.2",
@@ -31,13 +39,22 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.7",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "email-existence": "^0.1.6",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.15.3",
+    "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "tsoa": "^6.2.0"
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.9.13",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^6.2.0",
+    "winston": "^3.13.0"
   }
 }
