--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "email-existence": "^0.1.6",
